--- a/Analyze_ab_test_results_notebook.ipynb
+++ b/Analyze_ab_test_results_notebook.ipynb
@@ -22,8 +22,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Import all the necessary packages \n",
@@ -39,26 +41,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -124,7 +113,7 @@
        "4   864975  2017-01-21 01:52:26.210827    control     old_page          1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -177,27 +166,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The proportion of users converted: 0.11965919355605512\n"
+      "The proportion of users converted: 0.119659193556\n"
      ]
     }
    ],
    "source": [
     "# The proportion of users converted.\n",
-    "conv_user= df['converted'].value_counts()[1] / df['converted'].count()\n",
+    "conv_user= df['converted'].mean()\n",
     "print('The proportion of users converted: ' + str(conv_user))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 25,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -216,8 +207,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3893"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Another way\n",
+    "df.query(\"(landing_page == 'new_page' and group == 'control') or  \\\n",
+    "(landing_page == 'old_page' and group == 'treatment')\").shape[0] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -250,8 +265,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Drop the rows where treatment is not aligned with new_page or control is not aligned with old_page, \n",
@@ -263,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +289,7 @@
        "0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +310,7 @@
        "290585"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +331,7 @@
        "0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +353,7 @@
        "290584"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,26 +365,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -380,33 +384,17 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1899</th>\n",
-       "      <td>773192</td>\n",
-       "      <td>2017-01-09 05:37:58.781806</td>\n",
-       "      <td>treatment</td>\n",
-       "      <td>new_page</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2893</th>\n",
-       "      <td>773192</td>\n",
-       "      <td>2017-01-14 02:55:59.590927</td>\n",
-       "      <td>treatment</td>\n",
-       "      <td>new_page</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      user_id                   timestamp      group landing_page  converted\n",
-       "1899   773192  2017-01-09 05:37:58.781806  treatment     new_page          0\n",
-       "2893   773192  2017-01-14 02:55:59.590927  treatment     new_page          0"
+       "Empty DataFrame\n",
+       "Columns: [user_id, timestamp, group, landing_page, converted]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,8 +406,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Remove one of the duplicated user_id \n",
@@ -429,26 +419,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -478,7 +455,7 @@
        "2893   773192  2017-01-14 02:55:59.590927  treatment     new_page          0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +476,7 @@
        "(290584, 5)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +502,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +535,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,14 +547,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The proportion of users converted: 0.11959708724499628\n"
+      "The proportion of users converted: 0.119597087245\n"
      ]
     }
    ],
@@ -589,14 +566,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The probability converted in the control group: 0.1203863045004612\n"
+      "The probability converted in the control group: 0.1203863045\n"
      ]
     }
    ],
@@ -609,14 +586,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The probability converted in the treatment group: 0.11880806551510564\n"
+      "The probability converted in the treatment group: 0.118808065515\n"
      ]
     }
    ],
@@ -629,14 +606,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Th probability that an individual received the new page: 0.5000619442226688\n"
+      "Th probability that an individual received the new page: 0.500061944223\n"
      ]
     }
    ],
@@ -707,12 +684,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The convert rate for 𝑝_𝑛𝑒𝑤  under the null: 0.119597087245\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The convert rate for  𝑝𝑛𝑒𝑤  under the null\n",
+    "p_new = df2['converted'].mean()\n",
+    "print('The convert rate for 𝑝_𝑛𝑒𝑤  under the null: ' + str(p_new))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -723,12 +710,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The convert rate for 𝑝_old  under the null: 0.119597087245\n"
+     ]
+    }
+   ],
+   "source": [
+    "p_old = df2['converted'].mean()\n",
+    "print('The convert rate for 𝑝_old  under the null: ' + str(p_old))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1095,6 +1091,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Resources\n",
+    "https://www.youtube.com/watch?v=7FTp9JJ5DfE&feature=youtu.be "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -1120,7 +1126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.4.5"
   }
  },
  "nbformat": 4,
